--- a/project-files/lodinginterface.html
+++ b/project-files/lodinginterface.html
@@ -6,9 +6,8 @@
 	<title></title>
 </head>
 <body>
-    
 	<div class="main">
-		<h1>Loading animation</h1>
+    	<h1>Loading animation</h1>
 		<div class="move"></div>
 		<div class="c c1"></div>
 		<div class="c c2"></div>
@@ -26,8 +25,8 @@
 		color: white;
 	}
 	.main {
-	 position: absolute;
-	 left: -30%;
+	 	position: absolute;
+	 	left: -20%;
 		margin: 0 auto;
 		scale: 0.5;
 	}
@@ -116,16 +115,14 @@
 		90%{ scale:1.0; }
 		100%{ scale: 1.2; background: white; }
 	}
-	@media only screen and (min-width: 768px) {
-		.main {
-			scale: 1;
-		}
-	}
 @media only screen and (min-width: 768px) {
-    .main{
+	h1 {
+		font-size: 40px;
+	}
+    .main {
         position: absolute;
         left: 20%;
-        scale: 2;
+        scale: 1.3;
     }
 }
 </style>
