--- a/project-files/codfile-loader.html
+++ b/project-files/codfile-loader.html
@@ -130,7 +130,7 @@
     </div>
     <div class="main">
         <div class="head">
-            <span class="heading">JavaScript code</span>
+            <span class="heading">JS code</span>
             <button class="copy-button" onclick="copyCode(3)">Copy</button>
         </div>
         <textarea class="code" id="javascript">--js--</textarea>
